App now analyses. We use a tflite model, trained on toa data, to calculate a general win/loss based on team's data. Right now, we only use their scouted data but we will implement match data into the algorithm soon. Seeya, merk
Signed-off-by: LeonZong <noelstriangle@gmail.com>

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -16,6 +16,10 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+    aaptOptions {
+        noCompress "tflite"
+        noCompress "lite"
+    }
 }
 
 dependencies {
@@ -32,5 +36,7 @@ dependencies {
     def room_version = "1.1.1"
     implementation "android.arch.persistence.room:runtime:$room_version"
     annotationProcessor "android.arch.persistence.room:compiler:$room_version"
+    //noinspection GradleDynamicVersion
+    implementation "org.tensorflow:tensorflow-lite:+"
 
 }
